--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v16.0" nonce="Vlib4fRU"></script>
 <div id="menu">
 <li><a href="#about">About Me</a></li>
 <li><a href="#photos">My Photos</a></li>
@@ -31,7 +33,10 @@
 <br/>
 <br/>
 <br/>
-about me
+<h1 align=center><b>about me</b> </h1>
+<h2 align=center>my name is michael jordan</h2>
+<h3 align=center>I'm 60 years old. In my past I was a famous basketball player some will say the best of all times.</h3>
+<h4 align=center>My hobbies are playing basketball and winning.</h4>
 <br/>
 <br/>
 <br/>
@@ -54,9 +59,13 @@ about me
 <br/>
 <br/>
 <br/>
-my photos
+<h1 align=center><b>my photos</b> </h1>
 <br/>
+<img src=pic1.jpg width=250 height=200 />
+<img src=pic2.jpg width=200 height=200 />
 <br/>
+<img src=pic4.jpg width=250 height=200 />
+<img src=pic3.jpg width=200 height=200 />
 <br/>
 </section>
 
@@ -77,11 +86,13 @@ my photos
 <br/>
 <br/>
 <br/>
-my playlist
+<h1 align=center><b>my playlist</b> </h1>
 <br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLOhV0FrFphUeqgOq2RJzRhOIY7dzkHlEb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br/>
 <br/>
 </section>
+
 
 <section id="like" class="section">
 <br/>
@@ -100,7 +111,8 @@ my playlist
 <br/>
 <br/>
 <br/>
-give me a like
+<h1 align=center><b>give me a like</b> </h1>
+<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="" data-layout="" data-action="" data-size="" data-share="true"></div>
 <br/>
 <br/>
 <br/>
