--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
 <br/>
 <br/>
 <br/>
-scan my code
+<h1 align=center><b>scan my code</b> </h1>
 <br/>
+<img src=qrCode.png width=200 height=200 />
 <br/>
 <br/>
 </section>
@@ -158,7 +159,10 @@ scan my code
 <br/>
 <br/>
 <br/>
-ans
+<h1 align=center><b>ans</b> </h1>
+<h2 align=center>web 1.0 was static/read obly web while web 2.0 was read write web  allowing users to contribute and share data and web 3.0 became more personalize for each user</h2>
+<h3 align=center>web 1.0 websites were created and maintained by professionals web 2.0 users were given the ability to create their own content and change the website as they wanted it to be same for web 3.0</h3>
+<h4 align=center>web 1.0 purpose was to only show content while in web 2.0 the main purpose is Social web create interactive web and in web 3.0 main purpose is to focus on AI and machine learning processing the web</h4>
 <br/>
 <br/>
 <br/>
@@ -181,7 +185,20 @@ ans
 <br/>
 <br/>
 <br/>
-contact me
+<h1 align=center><b>contact me</b> </h1>
+<form METHOD = "POST" ACTION = "#menu">
+  <li>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="user_name" />
+  </li>
+  <li>
+    <label for="msg">Message:</label>
+    <textarea id="msg" name="user_message"></textarea>
+  </li>
+  <li>
+    <input type="submit" />
+  </li>
+</form>
 <br/>
 <br/>
 <br/>
