--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 <br/>
 <br/>
 <h1 align=center><b>contact me</b> </h1>
-<form METHOD = "POST" ACTION = "#menu">
+<form METHOD = "POST" ACTION = "#about">
   <li>
     <label for="name">Name:</label>
     <input type="text" id="name" name="user_name" />
